# folax

./: .gitignore  pyproject.toml
examples/box_implicit_operator_learning_data_driven/: fourier_3D_control_dict_10K.pkl  fourier_mechanical_implicit_pr.py
examples/implicit_operator_learning_data_driven/: fourier_3D_control_dict_10K.pkl  meta_alpha_meta_implicit_decoder_conductivity_fields.py  meta_implicit_decoder_conductivity_fields.py
examples/implicit_parametric_learning_square/: implicit_pr_lr_mechanical_2D.py  meta_alpha_implicit_pr_lr_mechanical_2D.py  meta_implicit_pr_lr_mechanical_2D.py
fol/controls/: control.py  fourier_control.py  identity_control.py
fol/deep_neural_networks/: deep_network.py  deep_o_net_parametric_operator_learning.py  deep_o_nets.py  explicit_parametric_operator_learning.py  fourier_parametric_operator_learning.py  implicit_parametric_operator_learning.py  meta_alpha_meta_implicit_parametric_operator_learning.py  meta_implicit_parametric_operator_learning.py  nns.py
fol/loss_functions/: fe_loss.py  kratos_small_displacement.py  loss.py  mechanical.py  mechanical_neohooke.py  mechanical_neohooke_AD.py  phase_field.py  regression_loss.py  thermal.py  transient_thermal.py
fol/mesh_input_output/: mesh.py
fol/solvers/: fe_nonlinear_residual_based_solver.py
fol/tools/: fem_utilities.py
tests/integration/: test_mechanical_2D_poly.py  test_mechanical_3D_poly.py  test_neo_hooke_AD_mechanical_2D.py  test_neo_hooke_mechanical_3D.py
tests/unit/: test_neo_hooke_mechanical_loss.py  test_neo_hooke_mechanical_loss_AD.py
(+2 files in other folders)
